[package]
name = "grynthar"
version = "0.2.1" 
edition = "2021"
authors = ["Ztry8 (AslanD)"] 

[dependencies]
macroquad = {version = "0.4.13", features = ["audio"]}
image = { version = "0.25.5", features = ["png"], default-features = false }
pathfinding = "4.13.0"
serde_json = "1.0.135"
rust-ini = "0.21"
noise = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.7"

[profile.dev.package.'*']
strip = true
debug = false
opt-level = 3
codegen-units = 1

[profile.release]
strip = true
debug = false
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
